# fastapi-daily

./: main.py  pyproject.toml
app/: CORS.py  access_form_data.py  app_onevent_decorator.py  background_tasks.py  body_parameter_validation.py  building_scheduler.py  cookies.py  crud.py  crud_rest_api_mongodb.py  crud_rest_api_mysql.py  data_validation_serialization.py  database.py  dependencies.py  excel_using_openpyxl.py  file_upload_using_cloudinary.py  fileupload_csv_store_mysql.py  fileupload_filebase.py  form_submission.py  hash_password.py  integration_third_party_api.py  lifespan_events.py  models.py  mongodb_conn.py  nested_models.py  password_hasing_w_bcrypt.py  path_paramter_validation.py  path_query_params.py  push_notification.py  pydantic_schema_validation.py  query_parameter_validation.py  read_write_csv.py  response_model.py  send_contact_form_via_twilio.py  send_message_via_twilio.py  send_sms_otp.py  sending_email.py  static_file.py  templates.py  upload_csv_to_json.py  upload_file.py  (+3 more)
app/OAuth2_Authentication/: auth.py  authentication.py  crud.py  database.py  models.py  schemas.py
app/many_to_many_sqlmodel/: database.py  manytomany.py  models.py  schemas.py
app/many_to_one_sqlmodel/: models.py  one.py  schemas.py
app/one_to_many_sqlmodel/: database.py  models.py  testing.py
app/sqlmodel-rest-api/: database.py  main.py  models.py
app/user_auth_jwt/: mysql_db_conn.py  schemas.py  user_auth_jwt.py
app/views/: form.html  index.html  weather.html  weather_index.html
