[project]
name = "fastapi-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.1",
    "bcrypt==4.3.0",
    "boto3>=1.42.59",
    "cffi==1.17.1",
    "click==8.2.1",
    "cloudinary>=1.44.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cryptography==45.0.4",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "ecdsa==0.19.1",
    "executing==2.2.1",
    "fastapi==0.115.12",
    "firebase>=4.0.1",
    "firebase-admin>=7.2.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2>=3.1.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "parso==0.8.5",
    "passlib==1.7.4",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pymongo>=4.16.0",
    "pymysql==1.1.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.5.0",
    "python-multipart>=0.0.22",
    "pyzmq==27.1.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uv==0.9.18",
    "uvicorn==0.34.3",
    "wcwidth==0.2.14",
]
